fix formatting to add half screen

--- a/proposal.html
+++ b/proposal.html
@@ -14,7 +14,7 @@
   </header>
 
   <main>
-    <section>
+    <section class="halfscreen">
       <h2>Problem/Data Domain</h2>
       <!-- Hannah's work -->
       <p>
