Added Google Fonts to CSS

--- a/proposal.html
+++ b/proposal.html
@@ -6,6 +6,9 @@
   <meta name="author" content="Hannah Yi, Grace Suyama, Kayla Doan, Athena Le">
   <title>INFO340 AU23 G7 Proposal</title>
   <link rel="stylesheet" href="css/proposal.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Aleo:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body>
