updated fonts part 2

--- a/proposal.html
+++ b/proposal.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="author" content="Hannah Yi, Grace Suyama, Kayla Doan, Athena Le">
   <title>INFO340 AU23 G7 Proposal</title>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Poppins&family=Aleo:wght@300;400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/proposal.css">
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Poppins&display=swap" rel="stylesheet">
 </head>
 
 <body>
