--- a/proposal.html
+++ b/proposal.html
@@ -18,7 +18,7 @@
     <section class="halfscreen">
       <h2>Problem/Data Domain</h2>
       <!-- Hannah's work -->
-      <p>
+      <!-- <p>
         Seattle is home to Starbucks, the most well known coffee industry in the world. Pretty much every corner you
         turn, there is a coffee shop. As much as it’s common and vital to many, there is more to coffee than just a
         deliciously brewed drink. From the farmers that grew the coffee beans, factory workers that process them,
@@ -38,13 +38,22 @@
         coffee shop uses ethically sourced beans, we aim to raise awareness in sustainable and equitable coffee
         production practices. This initiative will not only foster a deeper appreciation for the coffee industry, but
         also contribute to better lives of coffee farmers and their communities worldwide.
+      </p> -->
+      <p>
+        Seattle is home to Starbucks, the most well known coffee industry in the world. Pretty much every corner you turn, there is a coffee shop. Yet apart from the common coffee orders you see on a menu, a new culture of customization has been evolving. Through TikTok, Yelp, or blogs, users have posted personalized recipes, inviting others to try them. However these customized coffee reviews or recipes either tend to be scattered across multiple platforms, or existing apps are out-of-date. While customization of drinks is possible on existing coffee apps, there are often limited options and is tedious. Additionally, it is difficult for users to share their personalized recipes.
+      </p>
+      <p>
+        There have been existing apps like Acaia Coffee, where users can track and record their drinks with “Bean Stash Manager” or share with others through “Best Coffee Community” (<a href="https://apps.apple.com/us/app/acaia-coffee/id834883045" target="_blank">Acaia Coffee</a>, 2023).  While this app has similar goals as ours, many users have found it difficult to use due to having “lots of features” and “hard to see UI”. The app itself is also outdated, so while its intentions were clever it was executed poorly. On the other hand, RECaf, a caffeine tracker app, had more positive feedback with its modern Apple Design aesthetic and convenience (<a href="https://www.macstories.net/reviews/recaf-review-effortless-caffeine-tracking/" target="_blank">RECaf</a>, 2018).
+      </p>
+      <p>
+        By creating a more updated and customized coffee social media platform, we aim to create a community for all levels of coffee enthusiasts who want to connect with others within the community. This initiative will not only foster the culture of customization and serve as a platform for individuals to share their passion for coffee and unique coffee traditions, but also provide valuable insights for coffee businesses to improve upon their products and services.
       </p>
     </section>
 
     <section>
       <h2>App Description</h2>
       <!-- Athena's work -->
-      <p>
+      <!-- <p>
         The application’s user base primarily consists of coffee enthusiasts who care for sustainability and the ethical
         sourcing of coffee beans. These individuals are keen on discovering and experiencing diverse offerings from
         local coffee establishments, driven by their discerning taste preferences. Nonetheless, a significant portion of
@@ -55,10 +64,10 @@
         coffee shops that adhere to ethical sourcing standards, engage in a coffee quiz to suggest suitable coffee
         varieties to users, and encourage user participation by enabling them to contribute their unique coffee drink
         creations.
-      </p>
+      </p> -->
 
       <!-- Kayla's work -->
-      <p>
+      <!-- <p>
         The users of the coffee website will have access to a comprehensive range of information related to coffee. This
         includes details about various types of coffee, their origins, and flavor profiles. Information on which coffee
         suits their preferences best will also be available. However, the website's primary focus is on ethical sourcing
@@ -67,14 +76,28 @@
         submit and explore other users' coffee orders for new experiences. To provide accurate and up-to-date
         information, we intend to research what coffee beans different coffee shops use, and if they are fairtrade
         coffee or ethically sourced coffee.
-      </p>
+      </p> -->
 
       <!-- Grace's work -->
-      <p>
+      <!-- <p>
         Our app will help users solve if their coffee shops are ethically sourcing their beans by teaching what it means
         for beans to be ethically sourced. Users can learn what to look for as evidence for the sourcing and whether
         their favorite coffee shops meet the standards. Our app will also be helpful since it is accessible, will list
         what coffee shops are proven to have ethically sourced beans, provide a quiz to help any indecisive coffee drinkers choose their drink of the day, and users can also enjoy their love for coffee by sharing their custom drinks with the others to try.
+      </p> -->
+      <p>
+        The web app is designed to facilitate various interactions within the coffee community. It will incorporate the following features: 
+      </p>
+      <ul>
+        <li>Post personalized recipes/orders + user reviews and ratings: users can post their own coffee recipes, share their favorite coffee orders, and leave reviews and ratings for coffee drinks they’ve tried. This feature provides valuable insights for other coffee enthusiasts.</li>
+        <li>Coffee tracker: this feature allows users to insert their caffeine intake and track their coffee consumption weekly. Users can specify how much coffee, type of coffee roasts, iced/hot drink, and milk used to help monitor their coffee habits and make informed choices. This feature is helpful for those interested in managing their caffeine intake or health-conscious coffee drinkers. </li>
+        <li>Interactive quiz: users can take an interactive quiz where they answer questions about their coffee preferences. Based on their response, the app can recommend specific coffee blends or products to the user. This feature provides a personalized experience to help users discover new coffee varieties tailored to their taste, a fun and engaging way to explore different coffee options and share it with others through the first feature. </li>
+      </ul>
+      <p>
+        The coffee website provides a comprehensive resource, covering a wide spectrum of coffee-related information, from details on various coffee types to their origins and distinctive flavor profiles. Alongside the quiz, this empowers users to discover the coffee and coffee drinks that best align with their preferences. Users will also get to view their coffee habits, by using our coffee tracker. Furthermore, for the more adventurous coffee lovers, an option to explore and submit coffee orders that users can interact with and leave reviews adds a touch of excitement.
+      </p>
+      <p>
+        There are plenty of coffee tracker apps, but what sets our app apart is its fusion of coffee tracking and social interaction, consolidating the need for multiple apps like Instagram, Starbucks, Reddit, or Facebook. This all-in-one platform facilitates coffee enthusiasts to share their love for coffee, expand their coffee horizons through others’ unique recipes and preferences, and actively engage with the vibrant coffee-loving community. These features go beyond just promoting community engagement; they cater to the diverse needs and preferences of users, creating a dynamic hub for coffee aficionados to connect and celebrate their shared passion.
       </p>
     </section>
   </main>
