updated problem statement and features

--- a/proposal.html
+++ b/proposal.html
@@ -37,13 +37,13 @@
       </p>
       <ul>
         <li>
-          Post personalized recipes/orders + user reviews and ratings: users can post their own coffee recipes, share their favorite coffee orders, and leave reviews and ratings for coffee drinks they’ve tried. This feature provides valuable insights for other coffee enthusiasts.
+          Post personalized recipes/orders: users can post their own coffee recipes and share their favorite coffee orders for others to try. This feature provides valuable insights for other coffee enthusiasts.
         </li>
         <li>
-          Coffee tracker: this feature allows users to insert their caffeine intake and track their coffee consumption weekly. Users can specify how much coffee, type of coffee roasts, iced/hot drink, and milk used to help monitor their coffee habits and make informed choices. This feature is helpful for those interested in managing their caffeine intake or health-conscious coffee drinkers. 
+          Coffee tracker: this feature allows users to manually insert their caffeine intake and track tasted orders posted by others to record their coffee consumption weekly. Users can specify how much coffee, type of coffee roasts, iced/hot drink, and milk used to help monitor their coffee habits and make informed choices. This feature is helpful for those interested in managing their caffeine intake or health-conscious coffee drinkers. 
         </li>
         <li>
-          Interactive quiz: users can take an interactive quiz where they answer questions about their coffee preferences. Based on their response, the app can recommend specific coffee blends or products to the user. This feature provides a personalized experience to help users discover new coffee varieties tailored to their taste, a fun and engaging way to explore different coffee options and share it with others through the first feature. 
+          Interactive quiz: users can take an interactive quiz where they answer questions about their coffee preferences. Based on their response, the app can recommend coffee drinks to the user. This feature provides a personalized experience to help users discover new coffee varieties tailored to their taste, a fun and engaging way to explore different coffee options and share it with others through the first feature. 
         </li>
       </ul>
 
