Changed font link in head

--- a/quiz.html
+++ b/quiz.html
@@ -5,19 +5,24 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="Hannah Yi, Grace Suyama, Kayla Doan, Athena Le">
-  <title>INFO340 AU23 G7 Proposal</title>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Poppins&family=Aleo:wght@300;400&display=swap" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/proposal.css">
+  <title>INFO340 AU23 G7 Draft</title>
+  <!-- <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Poppins&family=Aleo:wght@300;400&display=swap" rel="stylesheet"> -->
+  <link href="https://fonts.googleapis.com/css2?family=Rosarivo&family=Poppins&display=swap" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
   <header>
-    <h1>Group 7 Proposal</h1>
+    <h1>Group 7 Draft</h1>
+    <h2>Coffee Interactive Quiz</h2>
   </header>
 
   <main>
-
-  </main>    
+  </main>  
+  
+  <footer>
+    <p>&copy; Hannah Yi, Grace Suyama, Kayla Doan, Athena Le & INFO 340</p>
+  </footer>
 </body>
 </html>
