--- a/quiz.html
+++ b/quiz.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="Hannah Yi, Grace Suyama, Kayla Doan, Athena Le">
   <title>INFO340 AU23 G7 Draft</title>
-  <!-- <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Poppins&family=Aleo:wght@300;400&display=swap" rel="stylesheet"> -->
   <link href="https://fonts.googleapis.com/css2?family=Rosarivo&family=Poppins&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
@@ -15,10 +14,21 @@
 <body>
   <header>
     <h1>Group 7 Draft</h1>
-    <h2>Coffee Interactive Quiz</h2>
   </header>
 
   <main>
+    <h2>Coffee Interactive Quiz</h2>
+    <section class="questions">
+      <p>A question for the quiz will go here</p>
+    </section>
+    <section class="options">
+      <ul>
+        <li>A multiple choice answer will be here</li>
+        <li>A multiple choice answer will be here</li>
+        <li>A multiple choice answer will be here</li>
+        <li>A multiple choice answer will be here</li>
+      </ul>
+    </section>
   </main>  
   
   <footer>
