Adding questions and options to quiz html

--- a/quiz.html
+++ b/quiz.html
@@ -19,14 +19,14 @@
   <main>
     <h2>Coffee Interactive Quiz</h2>
     <section class="questions">
-      <p>A question for the quiz will go here</p>
+      <p>What generally is your favorite coffee roast?</p>
     </section>
     <section class="options">
       <ul>
-        <li>A multiple choice answer will be here</li>
-        <li>A multiple choice answer will be here</li>
-        <li>A multiple choice answer will be here</li>
-        <li>A multiple choice answer will be here</li>
+        <li>Light</li>
+        <li>Medium</li>
+        <li>Medium-dark</li>
+        <li>Dark</li>
       </ul>
     </section>
   </main>  
