Edit the layout of the quiz options

--- a/quiz.html
+++ b/quiz.html
@@ -27,6 +27,7 @@
         <li>Medium</li>
         <li>Medium-dark</li>
         <li>Dark</li>
+        <li>No preference</li>
       </ul>
     </section>
   </main>  
