Design footer and add previous and next options

--- a/quiz.html
+++ b/quiz.html
@@ -30,6 +30,10 @@
         <li>No preference</li>
       </ul>
     </section>
+    <section class="buttons">
+      <div>Previous</div>
+      <div>Next</div>
+    </section>
   </main>  
   
   <footer>
