Added hover features

--- a/quiz.html
+++ b/quiz.html
@@ -18,9 +18,11 @@
 
   <main>
     <h2>Coffee Interactive Quiz</h2>
+
     <section class="questions">
       <p>What generally is your favorite coffee roast?</p>
     </section>
+
     <section class="options">
       <ul>
         <li>Light</li>
@@ -30,10 +32,12 @@
         <li>No preference</li>
       </ul>
     </section>
+
     <section class="buttons">
-      <div>Previous</div>
-      <div>Next</div>
+      <div class="previous">Previous</div>
+      <div class="next">Next</div>
     </section>
+
   </main>  
   
   <footer>
