--- a/quiz.html
+++ b/quiz.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="Hannah Yi, Grace Suyama, Kayla Doan, Athena Le">
   <title>INFO340 AU23 G7 Draft</title>
+  <!-- Favicon -->
+  <!-- <link rel="icon" type="image/png" href="/somewhere/myicon.png"> -->
   <link href="https://fonts.googleapis.com/css2?family=Rosarivo&family=Poppins&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
@@ -13,24 +15,22 @@
 
 <body>
   <header>
-    <h1>Group 7 Draft</h1>
+    <h1>Coffee Quiz</h1>
   </header>
 
   <main>
-    <h2>Coffee Interactive Quiz</h2>
-
     <section class="questions">
       <p>What generally is your favorite coffee roast?</p>
     </section>
 
     <section class="options">
-      <ul>
-        <li>Light</li>
-        <li>Medium</li>
-        <li>Medium-dark</li>
-        <li>Dark</li>
-        <li>No preference</li>
-      </ul>
+      <div>
+        <p>Light</p>
+        <p>Medium</p>
+        <p>Medium-dark</p>
+        <p>Dark</p>
+        <p>No preference</p>
+      </div>
     </section>
 
     <section class="buttons">
