Change fonts, background color, and add nav bar and back button to quiz page

--- a/quiz.html
+++ b/quiz.html
@@ -13,13 +13,21 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
-  <header>
+<body class="quiz-page">
+  <header class="quiz-header">
     <h1>Coffee Quiz</h1>
+    <nav class="quiz-nav">
+      <a>Home</a>
+      <a>Explore Orders</a>
+      <a>Tracker</a>
+      <a>Quiz</a>
+      <a>Login</a>
+    </nav>
   </header>
 
   <main>
-    <section class="questions">
+    <section class="question">
+      <p>Question #/##</p>
       <p>What generally is your favorite coffee roast?</p>
     </section>
 
