--- a/main.html
+++ b/main.html
@@ -5,19 +5,79 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="Hannah Yi, Grace Suyama, Kayla Doan, Athena Le">
-  <title>INFO340 AU23 G7 Proposal</title>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Poppins&family=Aleo:wght@300;400&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Rosarivo&family=Poppins&display=swap&family=Material+Icons" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/proposal.css">
+  <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.css" crossorigin="">
+
+  <link rel="stylesheet" href="css/style2.css">
+  <title>Coffee Main Page</title>
 </head>
 
 <body>
-  <header>
-    <h1>Group 7 Proposal</h1>
+<!-- Header -->
+  <header class="header" id="header">
+    <nav class="nav container">
+      <a href="#" class="nav__logo">
+        <i class="ri-cup-line"></i> Coffee
+      </a>
+
+      <div class="nav__menu" id="nav-menu">
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a href="#" class="nav__link">Home</a>
+          </li>
+
+          <li class="nav__item">
+            <a href="#" class="nav__link">Custom Orders</a>
+          </li>
+
+          <li class="nav__item">
+            <a href="#" class="nav__link">Tracker</a>
+          </li>
+
+          <li class="nav__item">
+            <a href="#" class="nav__link">Quiz</a>
+          </li>
+        </ul>
+
+        <a href="#" class="nav__button">Login</a>
+
+        <div class="'nav__close" id="nav-close">
+          <i class="ri-close-line"></i>
+        </div>
+      </div>
+
+      <div class="'toggle" id="nav-toggle">
+        <i class="ri-menu-line"></i>      
+      </div>
+    </nav>
   </header>
 
-  <main>
+  <!-- Main -->
+  <main class="main">
+    <section class="home">
 
-  </main>    
+    </section>
+  </main>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  <!-- GSAP -->
+  <script src>""</script> 
+
+   <!-- Link to JS  -->
+   <script src="main.js"></script> 
 </body>
 </html>
