tracker and h1 changes

--- a/tracker.html
+++ b/tracker.html
@@ -81,7 +81,7 @@
   </p>
 
   <p>
-    <label for="foam-volume">Volume of Milk</label>
+    <label for="foam-volume">Volume of Foam</label>
     <select name="foam-volume" id="foam-volume">
       <option value="small">30mL</option>
       <option value="medium">60mL</option>
