--- a/quiz.html
+++ b/quiz.html
@@ -18,10 +18,10 @@
     <a>Home</a>
     <a>Explore Orders</a>
     <a>Tracker</a>
-    <a>Quiz</a>
+    <a class="quiz-link">Quiz</a>
     <a>Login</a>
   </nav>
-  
+
   <header class="quiz-header">
     <h1>Coffee Quiz</h1>
   </header>
