--- a/tracker.html
+++ b/tracker.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Rosarivo&family=Poppins&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/proposal.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -22,24 +22,40 @@
 
 <!-- navigation bar 2 -->
 
-<div name="navbar2"> 
-  <div name="box1"> 
-    Manual Input
-  </div>
-  <div name="box1">
-    Your Frequent Drinks
-  </div>
-  <div name="box1">
-    Favorites
-  </div>
-  <div name="box1">
-    Caffeine Log
-  </div>
+<!-- container text-center -->
+<div class="navbar2"> 
+
+  <!-- row align-items-to-start -->
+  <div class="bar">
+
+    <div class="border">
+      <button type="button" class="btn btn-lg">Manual Input</button>
+    </div>
+<!-- 
+    <div class="border">
+      <div class="nav2">
+        Your Frequent Drinks
+      </div>
+    </div>
+
+    <div class="border">
+      <div class="nav2">
+        Favorites
+      </div>
+    </div>
+
+    <div class="border">
+      <div class="nav2">
+        Caffeine Log
+      </div>
+    </div> -->
+  </div>  
 </div>
 
-<div style="width: 100%; height: 100%; justify-content: flex-start; align-items: flex-start; gap: 142px; display: inline-flex">
-  <div style="width: 275px; height: 87px; position: relative">
-      <div style="width: 275px; height: 87px; left: 0px; top: 0px; position: absolute; background: #A86846; border-radius: 16px"></div>
+<!-- 
+<div navbar2 style="width: 100%; height: 100%; justify-content: flex-start; align-items: flex-start; gap: 142px; display: inline-flex">
+  <div bar style="width: 275px; height: 87px; position: relative">
+      <div border style="width: 275px; height: 87px; left: 0px; top: 0px; position: absolute; background: #A86846; border-radius: 16px"></div>
       <div style="width: 147px; height: 49.90px; left: 64px; top: 19.19px; position: absolute; text-align: center; color: #EFE3C8; font-size: 22px; font-family: Poppins; font-weight: 500; word-wrap: break-word">Manual Input</div>
   </div>
   <div style="width: 300px; height: 87px; position: relative">
@@ -54,7 +70,7 @@
       <div style="width: 242px; height: 87px; left: 0px; top: 0px; position: absolute; background: #38232A; border-radius: 16px"></div>
       <div style="width: 139px; height: 49.50px; left: 51px; top: 19.50px; position: absolute; text-align: center; color: #EFE3C8; font-size: 22px; font-family: Poppins; font-weight: 500; word-wrap: break-word">Caffeine Log</div>
   </div>
-</div>
+</div> -->
 
   <!-- dropdown menus -->
 
@@ -145,6 +161,7 @@
     </select>
   </p>
 
+  <button type="button" class="btn btn-primary">Log Drink</button>
   </main>
 </body>
 
