--- a/quiz.html
+++ b/quiz.html
@@ -15,11 +15,11 @@
 
 <body class="quiz-page">
   <nav class="quiz-nav">
-    <a>Home</a>
+    <a href="main.html">Home</a>
     <a>Explore Orders</a>
-    <a>Tracker</a>
+    <a href="tracker.html">Tracker</a>
     <a class="quiz-link">Quiz</a>
-    <a>Login</a>
+    <a href="signin.html">Login</a>
   </nav>
 
   <header class="quiz-header">
