Make nav a dropdown menu when on smaller screens for quiz page

--- a/quiz.html
+++ b/quiz.html
@@ -15,11 +15,24 @@
 
 <body class="quiz-page">
   <nav class="quiz-nav">
-    <a href="main.html">Home</a>
-    <a>Explore Orders</a>
-    <a href="tracker.html">Tracker</a>
-    <a class="quiz-link">Quiz</a>
-    <a href="signin.html">Login</a>
+    <div class="displayed-nav">
+      <a href="main.html">Home</a>
+      <a>Explore Orders</a>
+      <a href="tracker.html">Tracker</a>
+      <a class="quiz-link">Quiz</a>
+      <a href="signin.html">Login</a>
+    </div>
+
+    <div class="dropdown-nav">
+      <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Menu</a>
+      <ul class="dropdown-menu">
+          <li><a href="main.html">Home</a></li>
+          <li><a>Explore Orders</a></li>
+          <li><a href="tracker.html">Tracker</a></li>
+          <li><a class="quiz-link">Quiz</a></li>
+          <li><a href="signin.html">Login</a></li>
+      </ul>
+  </div>
   </nav>
 
   <header class="quiz-header">
