--- a/tracker.html
+++ b/tracker.html
@@ -27,7 +27,7 @@
   <!-- 2 bar style -->
   <div class="bar">
     <!-- 3 border -->
-    <div class="border">
+    <div class="border" id="select">
       <!-- 4 font style -->
       <h2>Manual Input</h2>
     </div>
