--- a/tracker2.html
+++ b/tracker2.html
@@ -16,3 +16,39 @@
   <header>
     <h1>Log Your Caffeine</h1>
   </header>
+
+<main>
+  <!-- 1 nav style -->
+<div class="navbar2"> 
+    <!-- 2 bar style -->
+    <div class="bar">
+      <!-- 3 border -->
+      <div class="border">
+        <!-- 4 font style -->
+        <h2>Manual Input</h2>
+      </div>
+    </div>  
+  
+    <div class="bar">
+      <div class="border" id="select">
+        <h2>Your Frequent Drinks</h2>
+      </div>
+    </div>
+  
+    <div class="bar">
+      <div class="border">
+        <h2>Favorites</h2>
+      </div>
+    </div>
+  
+    <div class="bar">
+      <div class="border">
+        <h2>Caffeine Log</h2>
+      </div>
+    </div>
+  </div>
+  
+</main>
+</body>
+
+</html>
