--- a/main.html
+++ b/main.html
@@ -60,7 +60,18 @@
   <!-- Main -->
   <main class="main">
     <!-- Home -->
-    <section class="home">
+    <section class="home" id="home">
+      <div class="home-text">
+        <h1>Start Exploring <br> Personalized Coffee</h1>
+        <p>Connect with other coffee enthusiasts, discover customized coffee beyond the common menu.</p>
+        <a href="#" class="home-btn">Get Started</a>
+      </div>
+      <div class="home-img">
+        <img src="img/bgvector.png" alt="">
+      </div>
+
+    </section>
+    <!-- <section class="home">
       <div class="home__container container">
         <div class="home__content">
           <h3 class="home__subtitle">
@@ -86,7 +97,7 @@
           </a>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- Custom orders -->
     <section class="about" id="about">
