frequent drinks cards

--- a/tracker2.html
+++ b/tracker2.html
@@ -19,7 +19,7 @@
 
 <main>
   <!-- 1 nav style -->
-<div class="navbar2"> 
+<div class="navbar2 justify-content-evenly"> 
     <!-- 2 bar style -->
     <div class="bar">
       <!-- 3 border -->
@@ -44,6 +44,50 @@
     <div class="bar">
       <div class="border">
         <h2>Caffeine Log</h2>
+      </div>
+    </div>
+  </div>
+
+  <!-- cards source: bootstrap -->
+  <div class="row row-cols-1 row-cols-md-2 g-4">
+    <div class="col-sm-6 justify-content-evenly">
+      <div class="card">
+        <img src="img/icedcoffee.jpg" class="card-img-top" alt="iced coffee">
+        <div class="card-body">
+          <h5 class="card-title">Drink 1</h5>
+          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <a href="#" class="btn btn-primary">Log this drink</a>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-6 justify-content-evenly">
+      <div class="card">
+        <img src="img/icedcoffee.jpg" class="card-img-top" alt="iced coffee">
+        <div class="card-body">
+          <h5 class="card-title">Drink 2</h5>
+          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <a href="#" class="btn btn-primary">Log this drink</a>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-6 justify-content-evenly">
+      <div class="card">
+        <img src="img/icedcoffee.jpg" class="card-img-top" alt="iced coffee">
+        <div class="card-body">
+          <h5 class="card-title">Drink 3</h5>
+          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+          <a href="#" class="btn btn-primary">Log this drink</a>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-6 justify-content-evenly">
+      <div class="card">
+        <img src="img/icedcoffee.jpg" class="card-img-top" alt="iced coffee">
+        <div class="card-body">
+          <h5 class="card-title">Drink 4</h5>
+          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <a href="#" class="btn btn-primary">Log this drink</a>
+        </div>
       </div>
     </div>
   </div>
