--- a/tracker.html
+++ b/tracker.html
@@ -23,7 +23,7 @@
 <!-- navigation bar 2 -->
 
 <!-- 1 nav style -->
-<div class="navbar2"> 
+<div class="navbar2 justify-content-evenly"> 
   <!-- 2 bar style -->
   <div class="bar">
     <!-- 3 border -->
@@ -54,9 +54,12 @@
 
   <!-- dropdown menus -->
 
-  <div class="inputs"> 
-    <div class="d-flex justify-content-center">
-      <label for="coffee-type">Coffee Drink Type</label>
+  <div class="inputs d-flex flex-column "> 
+    <div class="d-inline-flex p-2">
+      <div>
+      <h3>Coffee Drink Type</h3>
+      </div>
+      <div>
       <select class="form-select form-select-lg mb-3" aria-label="Default select" name="coffee-type" id="coffee-type">
         <option selected>Pick coffee drink type</option>
         <option value="espresso">Espresso</option>
@@ -68,16 +71,17 @@
         <option value="latte">Latte</option>
         <option value="custom">Custom</option>
       </select>
+      </div>
     </div>
 
-    <div class="d-flex justify-content-center">
-      <label for="temp">Temperature</label>
+    <div class="d-inline-flex p-2">
+      <h3>Temperature</h3>
       <button class="temp" type="button">Hot</button>
       <button class="temp" type="button">Iced</button>
     </div>
 
-    <div class="d-flex justify-content-center">
-      <label for="volume">Volume</label>
+    <div class="d-inline-flex p-2">
+      <h3>Volume</h3>
       <select class="form-select form-select-lg mb-3" aria-label="Default select" name="volume" id="volume">
         <option value="xsmall">extra small: 4 oz.</option>
         <option value="small">small: 6 oz.</option>
@@ -88,8 +92,8 @@
       </select>
     </div>
 
-    <div class="d-flex justify-content-center">
-      <label for="milk">Type of Milk</label>
+    <div class="d-inline-flex p-2">
+      <h3>Type of Milk</h3>
       <select class="form-select form-select-lg mb-3" aria-label="Default select" name="milk" id="milk">
         <option value="whole">Whole</option>
         <option value="soy">Soy</option>
@@ -103,8 +107,8 @@
       </select>
     </div>
 
-    <div class="d-flex justify-content-center">
-      <label for="volume-milk">Volume of Milk</label>
+    <div class="d-inline-flex p-2">
+      <h3>Volume of Milk</h3>
       <select class="form-select form-select-lg mb-3" aria-label="Default select" name="volume-milk" id="volume-milk">
         <option value="xsmall">extra small: 4 oz.</option>
         <option value="small">small: 6 oz.</option>
@@ -115,8 +119,8 @@
       </select>
     </div>
 
-    <div class="d-flex justify-content-center">
-      <label for="foam-volume">Volume of Foam</label>
+    <div class="d-inline-flex p-2">
+      <h3>Volume of Foam</h3>
       <select class="form-select form-select-lg mb-3" aria-label="Default select" name="foam-volume" id="foam-volume">
         <option value="small">30mL</option>
         <option value="medium">60mL</option>
@@ -124,14 +128,14 @@
       </select>
     </div>
 
-    <div class="d-flex justify-content-center">
-      <label for="drink-type">Drink Type</label>
+    <div class="d-inline-flex p-2">
+      <h3>Drink Type</h3>
       <button class="drink-type" type="button">Decaf</button>
       <button class="drink-type" type="button">Caffeinated</button>
     </div>
   
-    <div class="d-flex justify-content-center">
-      <label for="sweet">Sweetness Level</label>
+    <div class="d-inline-flex p-2">
+      <h3>Sweetness Level</h3>
       <select class="form-select form-select-lg mb-3" aria-label="Default select" name="sweet" id="sweet">
         <option value="zero">0% - no sugar</option>
         <option value="25">25% - 1/4 sugar</option>
@@ -144,7 +148,10 @@
 
   </div>
 
+  <div>
   <button type="button" class="btn btn-primary">Log Drink</button>
+  </div>
+
   </main>
 </body>
 
