--- a/quiz.html
+++ b/quiz.html
@@ -17,7 +17,7 @@
   <nav class="quiz-nav">
     <div class="displayed-nav">
       <a href="main.html">Home</a>
-      <a>Explore Orders</a>
+      <a href="orders.html">Explore Orders</a>
       <a href="tracker.html">Tracker</a>
       <a class="quiz-link">Quiz</a>
       <a href="signin.html">Login</a>
@@ -27,7 +27,7 @@
       <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Menu</a>
       <ul class="dropdown-menu">
           <li><a href="main.html">Home</a></li>
-          <li><a>Explore Orders</a></li>
+          <li><a href="orders.html">Explore Orders</a></li>
           <li><a href="tracker.html">Tracker</a></li>
           <li><a class="quiz-link">Quiz</a></li>
           <li><a href="signin.html">Login</a></li>
