--- a/quiz.html
+++ b/quiz.html
@@ -10,7 +10,7 @@
   <!-- <link rel="icon" type="image/png" href="/somewhere/myicon.png"> -->
   <link href="https://fonts.googleapis.com/css2?family=Rosarivo&family=Poppins&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style2.css">
 </head>
 
 <body class="quiz-page">
