--- a/account.html
+++ b/account.html
@@ -9,60 +9,99 @@
   <!-- <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Poppins&family=Aleo:wght@300;400&display=swap" rel="stylesheet"> -->
   <link href="https://fonts.googleapis.com/css2?family=Rosarivo&family=Poppins&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style2.css">
 </head>
 
 <body>
-  <header>
-    <nav> 
-      <div id="hamburger-menu"><a href="#"><i class="fa fa-bars" aria-label="menu"></i></a></div>
-      <div id="pages">
-        <ul>
-          <li> Home </li>
-          <li> Quiz </li>
-          <li> Coffee Tracker </li>
-          <li> Profile </li>
+  <header class="header" id="header">
+    <nav class="nav container">
+      <a href="#" class="nav__logo">
+        <i class="ri-cup-line"></i> Coffee
+      </a>
+
+      <div class="nav__menu" id="nav-menu">
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a href="#" class="nav__link">Home</a>
+          </li>
+
+          <li class="nav__item">
+            <a href="#" class="nav__link">Custom Orders</a>
+          </li>
+
+          <li class="nav__item">
+            <a href="#" class="nav__link">Tracker</a>
+          </li>
+
+          <li class="nav__item">
+            <a href="#" class="nav__link">Quiz</a>
+          </li>
         </ul>
+
+        <a href="#" class="nav__button">Login</a>
+
+        <div class="'nav__close" id="nav-close">
+          <i class="ri-close-line"></i>
+        </div>
+      </div>
+
+      <div class="'toggle" id="nav-toggle">
+        <i class="ri-menu-line"></i>      
       </div>
     </nav>
-    <div> 
-        
+    <div>
+
     </div>
   </header>
 
   <main>
     <div class="flex-container">
       <img class="profile-picture" src="img/profile-picture.jpg" alt="profile picture">
+      <button>
+        edit profile
+      </button>
     </div>
-    <div>
+    <div class="account-data">
+      <h2> Username </h2>
       <p> First Name, Last Name </p>
-      <p> Username </p>
       <p> Joined date xx/xxxx</p>
     </div>
 
+
     <div class="flex-container">
-      <div class="posts">
+      <div class="posts flex-items">
         <h3> Posts </h3>
-        <ul>
-          <li> White Chocolate Mocha </li>
-          <li> Pumpkin Spice Latte </li>
-        </ul>
       </div>
-      <div class="saved-drinks">
+      <div class="saved-drinks flex-items">
         <h3> Saved </h3>
-        <ul>
-          <li> Candy Frappauccio </li>
-          <li> Espresso Martini </li>
-        </ul>
-        <div class="tried-drinks">
-          <h4> Tasted </h4>
-          <ul> 
-            <li> idk what you've tried yet </li>
-          </ul>
-        </div>
+      </div>
+      <div class="tried-drinks flex-items">
+        <h3> Tasted </h4>
       </div>
     </div>
 
+
+    <div class="flex-container content-holder" >
+      <div class="posts flex-items">
+        <ul>
+          <li> white chocolate mocha</li>
+          <li> mocha frappe </li>
+        </ul>
+      </div>
+      <div class="saved-drinks flex-items">
+        <ul>
+          <li> white chocolate mocha</li>
+          <li> mocha frappe </li>
+        </ul>
+      </div>
+      <div class="tried-drinks flex-items">
+        <ul>
+          <li> white chocolate mocha</li>
+          <li> mocha frappe </li>
+        </ul>
+      </div>
+    </div>
   </main>    
+
 </body>
 </html>
