Fixing orders and quiz page, testing out universal nav bar

--- a/orders.html
+++ b/orders.html
@@ -20,7 +20,7 @@
       <a>Explore Orders</a>
       <a href="tracker.html">Tracker</a>
       <a href="quiz.html">Quiz</a>
-      <a href="signin.html">Login</a>
+      <a href="account.html">Account</a>
     </div>
 
     <div class="dropdown-nav">
@@ -30,7 +30,7 @@
           <li><a>Explore Orders</a></li>
           <li><a href="tracker.html">Tracker</a></li>
           <li><a href="quiz.html">Quiz</a></li>
-          <li><a href="signin.html">Login</a></li>
+          <li><a href="account.html">Account</a></li>
       </ul>
   </div>
   </nav>
