--- a/tracker.html
+++ b/tracker.html
@@ -13,7 +13,42 @@
 </head>
 
 <body>
-  <header>
+  <header class="header" id="header">
+    <nav class="nav container">
+      <a href="#" class="nav__logo">
+        <i class="ri-cup-line"></i> Coffee
+      </a>
+
+      <div class="nav__menu" id="nav-menu">
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a href="#" class="nav__link">Home</a>
+          </li>
+
+          <li class="nav__item">
+            <a href="#" class="nav__link">Custom Orders</a>
+          </li>
+
+          <li class="nav__item">
+            <a href="#" class="nav__link">Tracker</a>
+          </li>
+
+          <li class="nav__item">
+            <a href="#" class="nav__link">Quiz</a>
+          </li>
+        </ul>
+
+        <a href="#" class="nav__button">Login</a>
+
+        <div class="'nav__close" id="nav-close">
+          <i class="ri-close-line"></i>
+        </div>
+      </div>
+
+      <div class="'toggle" id="nav-toggle">
+        <i class="ri-menu-line"></i>      
+      </div>
+    </nav>
     <h1>Log Your Caffeine</h1>
   </header>
 
@@ -54,7 +89,7 @@
 
   <!-- dropdown menus -->
 
-  <div class="inputs d-flex flex-column "> 
+  <div class="inputs d-flex flex-column"> 
     <div class="d-inline-flex p-2">
       <div>
       <h3>Coffee Drink Type</h3>
