--- a/tracker.html
+++ b/tracker.html
@@ -49,7 +49,9 @@
         <i class="ri-menu-line"></i>      
       </div>
     </nav>
-    <h1>Log Your Caffeine</h1>
+    <div>
+      <h1> Log Your Caffeine </h1>
+    </div>
   </header>
 
   <main>
@@ -188,6 +190,7 @@
   </div>
 
   </main>
+  <script src="js/main.js"></script> 
 </body>
 
 </html>
