Fix quiz page, begin orders page nav bar

--- a/quiz.html
+++ b/quiz.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="Hannah Yi, Grace Suyama, Kayla Doan, Athena Le">
-  <title>INFO340 AU23 G7 Draft</title>
+  <title>Coffee Quiz Page</title>
   <!-- Favicon -->
   <!-- <link rel="icon" type="image/png" href="/somewhere/myicon.png"> -->
   <link href="https://fonts.googleapis.com/css2?family=Rosarivo&family=Poppins&display=swap&family=Material+Icons" rel="stylesheet">
@@ -16,7 +16,7 @@
 </head>
 
 <body class="quiz-page">
-  <!-- <nav class="quiz-nav">
+  <nav class="quiz-nav">
     <div class="displayed-nav">
       <a href="main.html">Home</a>
       <a href="orders.html">Explore Orders</a>
@@ -39,49 +39,6 @@
 
   <header class="quiz-header">
     <h1>Coffee Quiz</h1>
-  </header> -->
-
-  <header class="header" id="header">
-    <nav class="nav container">
-      <a href="#" class="nav__logo">
-        <i class="ri-cup-line"></i> Coffee
-      </a>
-
-      <div class="nav__menu" id="nav-menu">
-        <ul class="nav__list">
-          <li class="nav__item">
-            <a href="#" class="nav__link">Home</a>
-          </li>
-
-          <li class="nav__item">
-            <a href="#" class="nav__link">Custom Orders</a>
-          </li>
-
-          <li class="nav__item">
-            <a href="#" class="nav__link">Tracker</a>
-          </li>
-
-          <li class="nav__item">
-            <a href="#" class="nav__link">Quiz</a>
-          </li>
-        </ul>
-
-        <a href="#" class="nav__button">Login</a>
-
-        <div class="'nav__close" id="nav-close">
-          <i class="ri-close-line"></i>
-        </div>
-      </div>
-
-      <div class="'toggle" id="nav-toggle">
-        <i class="ri-menu-line"></i>      
-      </div>
-    </nav>
-    <div>
-
-    </div>
-<!-- 
-    <h1>Coffee Quiz</h1> -->
   </header>
 
   <main>
@@ -110,5 +67,6 @@
   <footer>
     <p>&copy; Hannah Yi, Grace Suyama, Kayla Doan, Athena Le & INFO 340</p>
   </footer>
+  <script src="js/main.js"></script> 
 </body>
 </html>
